# godot-symbol-search

./: .gitignore  CMakeLists.txt  README.md  generate_gdscript.py
.github/workflows/: build_and_release.yml
godot/addons/godot_symbol_search/: godot_symbol_search.tscn  godot_symbol_search_panel.tscn
src/: register_types.cpp  register_types.h  script_switcher.cpp  script_switcher.hpp  symbol_search.cpp  symbol_search.hpp
